[workspace]
members = ["pusu-client", "pusu-client-lib", "pusu-protocol", "pusu-server", "pusu-server-lib", "pusu-toolbox"]
resolver = "3"

[workspace.dependencies]
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
tracing = "0.1.41"
ulid = { version = "1.2.1", features = ["serde"] }
prost = "0.13.5"
serde = "1.0.219"
biscuit-auth = "5.0.0"
clap = "4.5.32"

[profile.release]
debug = true
