[package]
name = "plushy-server-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
thiserror = { workspace = true }

[dev-dependencies]
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git" }