[package]
name = "pusu-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
pusu-client-lib = { path = "../pusu-client-lib" }
tokio = { workspace = true, features = ["signal"] }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures = "0.3.31"
ctrlc-async = "3.2.2"
crossterm = "0.28.1"