[package]
name = "pusu-server-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
foundationdb-tuple = "0.9.1"
thiserror = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { workspace = true }
ulid = { workspace = true }
bincode2 = "2.0.1"
prost = { workspace = true }
biscuit-auth = "5.0.0"
pusu-protocol = { path = "../pusu-protocol" }

[dev-dependencies]
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git" }