[package]
name = "pusu-server-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
biscuit-auth = { workspace = true }
bincode2 = "2.0.1"
foundationdb = { workspace = true }
foundationdb-tuple = "0.9.1"
prost = { workspace = true }
pusu-protocol = { path = "../pusu-protocol" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"] }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git" }
pusu-toolbox = { path = "../pusu-toolbox" }
