[package]
name = "pusu-server-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
biscuit-auth = { workspace = true }
foundationdb = { workspace = true }
foundationdb-tuple = "0.9.1"
oval = "2.0.0"
prost = { workspace = true }
pusu-protocol = { path = "../pusu-protocol" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"] }
tracing = { workspace = true }
ulid = { workspace = true }
actix-server = { workspace = true }
actix-service = { workspace = true }
pusu-toolbox = { path = "../pusu-toolbox", optional = true }
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git", optional = true }

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git" }
pusu-toolbox = { path = "../pusu-toolbox" }
tracing-subscriber = { workspace = true }

[features]
testing = ["pusu-toolbox", "fdb-testcontainer"]